# Cloud.ru_Slides_bot

./: .env.example  .gitignore  HANDOFF-pptx-bot.md  PLAN.md  README.md  pyproject.toml  start.bat  stop.bat
bot/: app.py  config.py  jobs.py  logging_setup.py  queue_dispatch.py
bot/handlers/: cancel.py  document.py  placeholders.py  progress.py  resume.py  start.py  verstai.py
bot/i18n/: progress.py  ru.py
bot/middleware/: whitelist.py
docker/: Dockerfile.bot  Dockerfile.worker  docker-compose.yml
docker/fonts/: .gitkeep
docs/: m3_port_plan.md  probes.md
graph/: donor_map.py  graph.py
graph/designer/: __init__.py  graph.py  nodes.py  planner.py  vision_qa.py
graph/html/: graph.py  nodes.py
graph/nodes/: __init__.py  _stubs.py  agents.py  pipeline.py
llm/: client.py  output_parsers.py  roles.py
llm/prompts/: __init__.py  _shared.py  agent_01_brief_reader.py  agent_02_slide_classifier.py  agent_03_content_distributor.py  agent_04_layout_designer.py  agent_05_icon_picker.py  agent_06_infographic_maker.py  agent_07_copy_editor.py  agent_10_visual_verifier.py
probes/: 00_smoke.py  01_inspect_glm.py  02_role_fit.py  03_inspect_kimi.py  04_reasoning_toggle.py  05_role_fit_v2.py  06_vision.py  07_kimi_vision.py  _common.py
probes/html_spike/: brand.css  check1_llm.py  render.py
schemas/: design.py  session.py  slides.py
scripts/: build_exemplars.py  html_deck.py  live_run.py  live_run_design.py  make_chart_test_deck.py  make_test_deck.py  reassemble_design.py  render_png.py
storage/: redis_client.py
tmp/: probe_cover.py  probe_layout.py  probe_points.py  probe_table.py
worker/: celery_app.py  progress.py  skill_bridge.py
(+144 files in other folders)
